# sing-box-subscribe

./: README.md  pyproject.toml  tool.py
config_template/: config_template_groups_openwrt.json  config_template_groups_tun.json  config_template_groups_xmy.json  config_template_groups_xmy_for_shellcrash.json  config_template_groups_xmy_for_win.json  config_template_groups_xmy_rule_set.json  xmy_local_rule.json  xmy_rule_android.json  xmy_rule_for_shell_crash.json
config_template/xmy/: config_template_groups_openwrt.json  mac_client.json
parsers/: ss.py  vmess.py
